--- a/template/default.tex
+++ b/template/default.tex
@@ -8,7 +8,7 @@
 %\input{/usr/local/share/texmf/preamble/pream01.tex} % Mac
 %UTF-8 case : pream**_utf8.tex
 %
-%01 -> jsarticle, ’Œ‚ ‚è, listing –³
+%01 -> jsarticle, æŸ±ã‚ã‚Š, listing ç„¡
 %02 ->
 %
 %====== hyperref ===========================
@@ -16,7 +16,7 @@
 %\AtBeginShipoutFirst{\special{pdf:tounicode 90ms-RKSJ-UCS2}} % Win
 %\AtBeginDvi{\special{pdf:tounicode EUC-UCS2}} % Mac
 %
-%====== ”®”Ô† ===============
+%====== æ•°å¼ç•ªå· ===============
 %\makeatletter
 %\renewcommand{\theequation}{\arabic{section},~\arabic{subsection},~\arabic{equation}}
 %\@addtoreset{equation}{section}
